force-app/main/default/objects/ASPN_Integration__e/ASPN_Integration__e.object-meta.xml
<CustomObject>
    <description>This platform event is used to send the Opportunity data to ASPN.</description>
    <label>ASPN Integration</label>
    <pluralLabel>ASPN Integrations</pluralLabel>
</CustomObject>