force-app/main/default/objects/ASPN_Integration__e/fields/ASPNRxChaseConsent__c.field-meta.xml
<CustomField>
    <fullName>ASPNRxChaseConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the patient has consented to ASPN Rx chase activities.</description>
    <label>ASPNRxChaseConsent</label>
    <type>Checkbox</type>
</CustomField>