force-app/main/default/objects/ASPN_Integration__e/fields/doctorCity__c.field-meta.xml
<CustomField>
    <fullName>doctorCity__c</fullName>
    <description>Provider address – city value</description>
    <label>doctorCity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>