force-app/main/default/objects/ASPN_Integration__e/fields/doctorFirstName__c.field-meta.xml
<CustomField>
    <fullName>doctorFirstName__c</fullName>
    <description>Provider’s first name.</description>
    <label>doctorFirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>