force-app/main/default/objects/ASPN_Integration__e/fields/doctorLastName__c.field-meta.xml
<CustomField>
    <fullName>doctorLastName__c</fullName>
    <description>Provider’s last name.</description>
    <label>doctorLastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>