force-app/main/default/objects/ASPN_Integration__e/fields/doctorNPI__c.field-meta.xml
<CustomField>
    <fullName>doctorNPI__c</fullName>
    <description>Provider’s NPI (National Provider Identifier)</description>
    <label>doctorNPI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>