force-app/main/default/objects/ASPN_Integration__e/fields/doctorPhone__c.field-meta.xml
<CustomField>
    <fullName>doctorPhone__c</fullName>
    <description>Provider’s phone number.</description>
    <label>doctorPhone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>