force-app/main/default/objects/ASPN_Integration__e/fields/doctorState__c.field-meta.xml
<CustomField>
    <fullName>doctorState__c</fullName>
    <description>Provider’s state.</description>
    <label>doctorState</label>
    <length>2</length>
    <type>Text</type>
</CustomField>