force-app/main/default/objects/ASPN_Integration__e/fields/doctorZip__c.field-meta.xml
<CustomField>
    <fullName>doctorZip__c</fullName>
    <description>Provider address – zip value</description>
    <label>doctorZip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>