force-app/main/default/objects/ASPN_Integration__e/fields/emailOptIn__c.field-meta.xml
<CustomField>
    <fullName>emailOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the patient has opted in to receive email communications.</description>
    <label>emailOptIn</label>
    <type>Checkbox</type>
</CustomField>