force-app/main/default/objects/ASPN_Integration__e/fields/ExternalASPNID__c.field-meta.xml
<CustomField>
    <fullName>ExternalASPNID__c</fullName>
    <description>External ASPN identifier for the opportunity line item.</description>
    <label>ExternalASPNID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>