force-app/main/default/objects/ASPN_Integration__e/fields/ExternalSource__c.field-meta.xml
<CustomField>
    <fullName>ExternalSource__c</fullName>
    <description>Indicates the external system sending the transaction.</description>
    <label>ExternalSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>