force-app/main/default/objects/ASPN_Integration__e/fields/ExtPatientID__c.field-meta.xml
<CustomField>
    <fullName>ExtPatientID__c</fullName>
    <description>External Patient ID from the Patient Account.</description>
    <label>ExtPatientID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>