force-app/main/default/objects/ASPN_Integration__e/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <description>Patient’s gender.</description>
    <label>gender</label>
    <length>6</length>
    <type>Text</type>
</CustomField>