force-app/main/default/objects/ASPN_Integration__e/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>