force-app/main/default/objects/ASPN_Integration__e/fields/patientAddress__c.field-meta.xml
<CustomField>
    <fullName>patientAddress__c</fullName>
    <description>Patient&apos;s street address</description>
    <label>patientAddress</label>
    <length>80</length>
    <type>Text</type>
</CustomField>