force-app/main/default/objects/ASPN_Integration__e/fields/patientBirthdate__c.field-meta.xml
<CustomField>
    <fullName>patientBirthdate__c</fullName>
    <description>Patient’s date of birth</description>
    <label>patientBirthdate</label>
    <type>Date</type>
</CustomField>