force-app/main/default/objects/ASPN_Integration__e/fields/patientCity__c.field-meta.xml
<CustomField>
    <fullName>patientCity__c</fullName>
    <description>Patient’s city</description>
    <label>patientCity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>