force-app/main/default/objects/ASPN_Integration__e/fields/patientDiabetesType__c.field-meta.xml
<CustomField>
    <fullName>patientDiabetesType__c</fullName>
    <description>Patient’s type of diabetes.</description>
    <label>patientDiabetesType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>