force-app/main/default/objects/ASPN_Integration__e/fields/patientEmail__c.field-meta.xml
<CustomField>
    <fullName>patientEmail__c</fullName>
    <description>Patient’s email address</description>
    <label>patientEmail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>