force-app/main/default/objects/ASPN_Integration__e/fields/patientFirstName__c.field-meta.xml
<CustomField>
    <fullName>patientFirstName__c</fullName>
    <description>Patient’s first name</description>
    <label>patientFirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>