force-app/main/default/objects/ASPN_Integration__e/fields/patientLastName__c.field-meta.xml
<CustomField>
    <fullName>patientLastName__c</fullName>
    <description>Patient’s last name</description>
    <label>patientLastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>