force-app/main/default/objects/ASPN_Integration__e/fields/patientPhone__c.field-meta.xml
<CustomField>
    <fullName>patientPhone__c</fullName>
    <description>Patient’s primary phone number.</description>
    <label>patientPhone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>