force-app/main/default/objects/ASPN_Integration__e/fields/patientPostalCode__c.field-meta.xml
<CustomField>
    <fullName>patientPostalCode__c</fullName>
    <description>Patient’s postal/ZIP code.</description>
    <label>patientPostalCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>