force-app/main/default/objects/ASPN_Integration__e/fields/patientState__c.field-meta.xml
<CustomField>
    <fullName>patientState__c</fullName>
    <description>Patient’s state.</description>
    <label>patientState</label>
    <length>2</length>
    <type>Text</type>
</CustomField>