force-app/main/default/objects/ASPN_Integration__e/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <description>Patient’s preferred language.</description>
    <label>PreferredLanguage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>