force-app/main/default/objects/ASPN_Integration__e/fields/productName__c.field-meta.xml
<CustomField>
    <fullName>productName__c</fullName>
    <description>Product name selected in the dialog</description>
    <label>productName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>