force-app/main/default/objects/ASPN_Integration__e/fields/productNDC__c.field-meta.xml
<CustomField>
    <fullName>productNDC__c</fullName>
    <description>Product NDC (National Drug Code)</description>
    <label>productNDC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>