force-app/main/default/objects/ASPN_Integration__e/fields/ReasonForCancellation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForCancellation__c</fullName>
    <description>Reason for cancellation from Opportunity Line Item Sub-Status.</description>
    <label>ReasonForCancellation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>