force-app/main/default/objects/ASPN_Integration__e/fields/smsOptIn__c.field-meta.xml
<CustomField>
    <fullName>smsOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the patient has opted in to receive SMS/text communications.</description>
    <label>smsOptIn</label>
    <type>Checkbox</type>
</CustomField>