force-app/main/default/objects/ASPN_Integration__e/fields/SourceID__c.field-meta.xml
<CustomField>
    <fullName>SourceID__c</fullName>
    <description>Unique external identifier for the patient’s Account</description>
    <label>SourceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>