force-app/main/default/objects/ASPN_Integration__e/fields/thirdPartyConsent__c.field-meta.xml
<CustomField>
    <fullName>thirdPartyConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the patient has provided consent to share information with third-party partners.</description>
    <label>thirdPartyConsent</label>
    <type>Checkbox</type>
</CustomField>