force-app/main/default/objects/ASPN_Integration__e/fields/Transactiontype__c.field-meta.xml
<CustomField>
    <fullName>Transactiontype__c</fullName>
    <description>Identifies the type of transaction being processed.</description>
    <label>Transactiontype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>